@@ -1,3 +1,13 @@
+2005-04-17  Murray Cumming  <murrayc@murrayc.com>
+
+	* glom/mode_data/box_data_list.cc:
+	* glom/mode_data/box_data_list.h:
+	* glom/mode_data/box_data_list_related.cc:
+	* glom/mode_data/box_data_list_related.h:
+	Emit the signal_record_changed signal when 
+	deleting related records, to cause 
+	field recalculations.
+
 2005-04-17  Murray Cumming <murrayc@murrayc.com>
 
 	* glom/mode_data/box_data.cc: record_new(): Iterate 
